deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-cd
  labels:
    name: gateway-cd
